src/parser.rs
use crate::ast::*;
use crate::diagnostic::{Diagnostic, LangResult, Span};
use crate::token::{Keyword, Token, TokenKind};

pub struct Parser {
    tokens: Vec<Token>,
    current: usize,
}

impl Parser {
    pub fn new(tokens: Vec<Token>) -> Self {
        Self { tokens, current: 0 }
    }

    pub fn parse_program(&mut self) -> LangResult<Program> {
        let mut items = Vec::new();
        while !self.is_at_end() {
            self.skip_indent_tokens();
            if self.is_at_end() {
                break;
            }
            self.parse_top_level_into(&mut items)?;
        }
        Ok(Program { items })
    }

    fn parse_top_level_into(&mut self, items: &mut Vec<Item>) -> LangResult<()> {
        let attrs = self.parse_outer_attrs()?;
        // Attributes may be on their own line(s); skip whitespace before the item.
        self.skip_indent_tokens();
        let is_pub = self.match_keyword(Keyword::Pub);
        self.skip_newlines();

        if self.check_keyword(Keyword::Actor) {
            if !attrs.is_empty() {
                return Err(Diagnostic::new(
                    "attributes are only supported on functions in this release",
                    self.peek().span.clone(),
                ));
            }
            self.parse_actor_sugar(items, is_pub)?;
            self.skip_indent_tokens();
            return Ok(());
        }

        let is_async = self.match_keyword(Keyword::Async);

        if self.check_keyword(Keyword::Fn) {
            items.push(Item::Function(
                self.parse_function_with_attrs(is_pub, is_async, attrs)?,
            ));
            self.skip_indent_tokens();
            return Ok(());
        }
        if !attrs.is_empty() {
            return Err(Diagnostic::new(
                "attributes are only supported on functions in this release",
                self.peek().span.clone(),
            ));
        }
        if is_async {
            return Err(Diagnostic::new(
                "'async' must be followed by a function declaration",
                self.peek().span.clone(),
            ));
        }
        if self.check_keyword(Keyword::Struct) {
            items.push(Item::Struct(self.parse_struct(is_pub)?));
            self.skip_indent_tokens();
            return Ok(());
        }
        if self.check_keyword(Keyword::Enum) {
            items.push(Item::Enum(self.parse_enum(is_pub)?));
            self.skip_indent_tokens();
            return Ok(());
        }
        if self.check_keyword(Keyword::Const) {
            items.push(Item::Const(self.parse_const_decl(is_pub)?));
            self.skip_indent_tokens();
            return Ok(());
        }
        if self.check_keyword(Keyword::Module) {
            items.push(Item::Module(self.parse_module(is_pub)?));
            self.skip_indent_tokens();
            return Ok(());
        }
        if self.check_keyword(Keyword::Import) || self.check_keyword(Keyword::Use) {
            items.push(Item::Import(self.parse_import()?));
            self.skip_indent_tokens();
            return Ok(());
        }
        if self.check_keyword(Keyword::Trait) {
            items.push(Item::Trait(self.parse_trait(is_pub)?));
            self.skip_indent_tokens();
            return Ok(());
        }
        if self.check_keyword(Keyword::Impl) {
            items.push(Item::Impl(self.parse_impl()?));
            self.skip_indent_tokens();
            return Ok(());
        }
        if self.check_keyword(Keyword::Extern) {
            items.push(Item::Extern(self.parse_extern()?));
            self.skip_indent_tokens();
            return Ok(());
        }

        items.push(Item::Statement(self.parse_statement()?));
        self.skip_indent_tokens();
        Ok(())
    }

    // ── Actor sugar ───────────────────────────────────────────────────────────

    fn parse_actor_sugar(&mut self, items: &mut Vec<Item>, is_pub: bool) -> LangResult<()> {
        let span = self.expect_keyword(Keyword::Actor, "expected 'actor'")?;
        let name = self.expect_ident("expected actor name")?;

        let mut fields: Vec<Field> = Vec::new();
        let mut receive_arms: Vec<MatchArm> = Vec::new();
        let mut saw_receive = false;

        // Both old `{ }` and new `:` + indent styles
        if self.match_kind(&TokenKind::LeftBrace) {
            // Old brace style
            self.skip_indent_tokens();
            while !self.check_kind(&TokenKind::RightBrace) && !self.is_at_end() {
                if self.match_keyword(Keyword::Receive) {
                    saw_receive = true;
                    receive_arms = self.parse_receive_arms_brace()?;
                    self.skip_indent_tokens();
                    continue;
                }
                let state_ident =
                    self.expect_ident("expected 'state' or 'receive' in actor body")?;
                if state_ident != "state" {
                    return Err(Diagnostic::new(
                        format!("expected 'state' or 'receive', got '{state_ident}'"),
                        self.previous().span.clone(),
                    ));
                }
                let field_name = self.expect_ident("expected field name after 'state'")?;
                self.expect_kind(&TokenKind::Colon, "expected ':' after field name")?;
                let ty = self.parse_type_ref()?;
                fields.push(Field {
                    name: field_name,
                    ty,
                });
                self.match_kind(&TokenKind::Comma);
                self.skip_indent_tokens();
            }
            self.expect_kind(&TokenKind::RightBrace, "expected '}' to close actor")?;
        } else {
            // New indent style
            self.expect_kind(&TokenKind::Colon, "expected ':' or '{' after actor name")?;
            self.match_kind(&TokenKind::Newline);
            self.expect_kind(&TokenKind::Indent, "expected indented actor body")?;
            while !self.check_kind(&TokenKind::Dedent) && !self.is_at_end() {
                self.skip_newlines();
                if self.check_kind(&TokenKind::Dedent) {
                    break;
                }
                if self.match_keyword(Keyword::Receive) {
                    saw_receive = true;
                    receive_arms = self.parse_receive_arms_indent()?;
                    self.match_kind(&TokenKind::Newline);
                    continue;
                }
                let state_ident =
                    self.expect_ident("expected 'state' or 'receive' in actor body")?;
                if state_ident != "state" {
                    return Err(Diagnostic::new(
                        format!("expected 'state' or 'receive', got '{state_ident}'"),
                        self.previous().span.clone(),
                    ));
                }
                let field_name = self.expect_ident("expected field name after 'state'")?;
                self.expect_kind(&TokenKind::Colon, "expected ':' after field name")?;
                let ty = self.parse_type_ref()?;
                fields.push(Field {
                    name: field_name,
                    ty,
                });
                self.match_kind(&TokenKind::Newline);
            }
            self.match_kind(&TokenKind::Dedent);
        }

        items.push(Item::Struct(StructDecl {
            name: name.clone(),
            generics: Vec::new(),
            fields,
            is_pub,
            span: span.clone(),
        }));

        if saw_receive {
            let step_body = Block {
                statements: vec![Stmt::Expr {
                    expr: Expr::Match {
                        scrutinee: Box::new(Expr::Ident("msg".to_string(), span.clone())),
                        arms: receive_arms,
                        span: span.clone(),
                    },
                    has_semicolon: false,
                    span: span.clone(),
                }],
                span: span.clone(),
            };
            let step_fn = FunctionDecl {
                name: "step".to_string(),
                generics: Vec::new(),
                params: vec![
                    Param {
                        name: "self".to_string(),
                        ty: TypeRef::Infer,
                    },
                    Param {
                        name: "msg".to_string(),
                        ty: TypeRef::Infer,
                    },
                ],
                return_type: TypeRef::Named(name.clone()),
                body: step_body,
                is_async: false,
                is_pub: true,
                attrs: Vec::new(),
                span: span.clone(),
            };
            items.push(Item::Impl(ImplBlock {
                trait_name: None,
                target: name,
                generics: Vec::new(),
                methods: vec![step_fn],
                span,
            }));
        }
        Ok(())
    }

    fn parse_receive_arms_brace(&mut self) -> LangResult<Vec<MatchArm>> {
        self.expect_kind(&TokenKind::LeftBrace, "expected '{' before receive arms")?;
        let mut arms = Vec::new();
        self.skip_indent_tokens();
        while !self.check_kind(&TokenKind::RightBrace) && !self.is_at_end() {
            let arm_span = self.peek().span.clone();
            let pattern = self.parse_pattern()?;
            self.expect_kind(&TokenKind::FatArrow, "expected '=>' in receive arm")?;
            let body = self.parse_expression(0)?;
            arms.push(MatchArm {
                pattern,
                body,
                span: arm_span,
            });
            self.match_kind(&TokenKind::Comma);
            self.skip_indent_tokens();
        }
        self.expect_kind(&TokenKind::RightBrace, "expected '}' after receive arms")?;
        Ok(arms)
    }

    fn parse_receive_arms_indent(&mut self) -> LangResult<Vec<MatchArm>> {
        self.expect_kind(&TokenKind::Colon, "expected ':' before receive arms")?;
        self.match_kind(&TokenKind::Newline);
        self.expect_kind(&TokenKind::Indent, "expected indented receive arms")?;
        let mut arms = Vec::new();
        while !self.check_kind(&TokenKind::Dedent) && !self.is_at_end() {
            self.skip_newlines();
            if self.check_kind(&TokenKind::Dedent) {
                break;
            }
            let arm_span = self.peek().span.clone();
            let pattern = self.parse_pattern()?;
            self.expect_kind(&TokenKind::FatArrow, "expected '=>' in receive arm")?;
            let body = self.parse_expression(0)?;
            arms.push(MatchArm {
                pattern,
                body,
                span: arm_span,
            });
            self.match_kind(&TokenKind::Newline);
        }
        self.match_kind(&TokenKind::Dedent);
        Ok(arms)
    }

    // ── Function ──────────────────────────────────────────────────────────────

    fn parse_function(&mut self, is_pub: bool, is_async: bool) -> LangResult<FunctionDecl> {
        self.parse_function_with_attrs(is_pub, is_async, Vec::new())
    }

    fn parse_function_with_attrs(
        &mut self,
        is_pub: bool,
        is_async: bool,
        attrs: Vec<String>,
    ) -> LangResult<FunctionDecl> {
        let span = self.expect_keyword(Keyword::Fn, "expected 'fn'")?;
        let name = self.expect_ident("expected function name")?;
        let generics = self.parse_generics()?;
        let params = self.parse_params()?;
        let return_type = if self.match_kind(&TokenKind::Arrow) {
            self.parse_type_ref()?
        } else {
            TypeRef::Unit
        };
        self.skip_where_clauses()?;
        let body = self.parse_block()?;
        Ok(FunctionDecl {
            name,
            generics,
            params,
            return_type,
            body,
            is_async,
            is_pub,
            attrs,
            span,
        })
    }

    fn parse_outer_attrs(&mut self) -> LangResult<Vec<String>> {
        let mut attrs = Vec::new();
        while self.check_kind(&TokenKind::Hash) {
            self.advance();
            self.expect_kind(&TokenKind::LeftBracket, "expected '[' after '#'")?;
            let name = self.expect_ident("expected attribute name after '#['")?;
            self.expect_kind(&TokenKind::RightBracket, "expected ']' to close attribute")?;
            attrs.push(name);
        }
        Ok(attrs)
    }

    fn parse_params(&mut self) -> LangResult<Vec<Param>> {
        self.expect_kind(&TokenKind::LeftParen, "expected '('")?;
        let mut params = Vec::new();
        if !self.check_kind(&TokenKind::RightParen) {
            loop {
                if self.match_keyword(Keyword::Self_) {
                    params.push(Param {
                        name: "self".to_string(),
                        ty: TypeRef::Infer,
                    });
                } else {
                    let name = self.expect_ident("expected parameter name")?;
                    // Type annotation is optional (duck typing)
                    let ty = if self.match_kind(&TokenKind::Colon) {
                        self.parse_type_ref()?
                    } else {
                        TypeRef::Infer
                    };
                    params.push(Param { name, ty });
                }
                if !self.match_kind(&TokenKind::Comma) {
                    break;
                }
                if self.check_kind(&TokenKind::RightParen) {
                    break;
                }
            }
        }
        self.expect_kind(&TokenKind::RightParen, "expected ')' after parameters")?;
        Ok(params)
    }

    // ── Struct ────────────────────────────────────────────────────────────────

    fn parse_struct(&mut self, is_pub: bool) -> LangResult<StructDecl> {
        let span = self.expect_keyword(Keyword::Struct, "expected 'struct'")?;
        let name = self.expect_ident("expected struct name")?;
        let generics = self.parse_generics()?;
        let fields = self.parse_struct_body()?;
        Ok(StructDecl {
            name,
            generics,
            fields,
            is_pub,
            span,
        })
    }

    fn parse_struct_body(&mut self) -> LangResult<Vec<Field>> {
        if self.match_kind(&TokenKind::LeftBrace) {
            // Old brace style
            let mut fields = Vec::new();
            self.skip_indent_tokens();
            while !self.check_kind(&TokenKind::RightBrace) && !self.is_at_end() {
                self.match_keyword(Keyword::Pub);
                let field_name = self.expect_ident("expected field name")?;
                self.expect_kind(&TokenKind::Colon, "expected ':' after field name")?;
                let ty = self.parse_type_ref()?;
                fields.push(Field {
                    name: field_name,
                    ty,
                });
                self.match_kind(&TokenKind::Comma);
                self.skip_indent_tokens();
            }
            self.expect_kind(&TokenKind::RightBrace, "expected '}' after struct fields")?;
            Ok(fields)
        } else {
            // New Python style: struct Name:\n    field: Type
            self.expect_kind(&TokenKind::Colon, "expected ':' or '{' for struct body")?;
            self.match_kind(&TokenKind::Newline);
            self.expect_kind(&TokenKind::Indent, "expected indented struct fields")?;
            let mut fields = Vec::new();
            while !self.check_kind(&TokenKind::Dedent) && !self.is_at_end() {
                self.skip_newlines();
                if self.check_kind(&TokenKind::Dedent) {
                    break;
                }
                self.match_keyword(Keyword::Pub);
                let field_name = self.expect_ident("expected field name")?;
                self.expect_kind(&TokenKind::Colon, "expected ':' after field name")?;
                let ty = self.parse_type_ref()?;
                fields.push(Field {
                    name: field_name,
                    ty,
                });
                self.match_kind(&TokenKind::Newline);
            }
            self.match_kind(&TokenKind::Dedent);
            Ok(fields)
        }
    }

    // ── Enum ──────────────────────────────────────────────────────────────────

    fn parse_enum(&mut self, is_pub: bool) -> LangResult<EnumDecl> {
        let span = self.expect_keyword(Keyword::Enum, "expected 'enum'")?;
        let name = self.expect_ident("expected enum name")?;
        let generics = self.parse_generics()?;
        let variants = self.parse_enum_body()?;
        Ok(EnumDecl {
            name,
            generics,
            variants,
            is_pub,
            span,
        })
    }

    fn parse_enum_body(&mut self) -> LangResult<Vec<Variant>> {
        let use_brace = self.match_kind(&TokenKind::LeftBrace);
        if !use_brace {
            self.expect_kind(&TokenKind::Colon, "expected ':' or '{' for enum body")?;
            self.match_kind(&TokenKind::Newline);
            self.expect_kind(&TokenKind::Indent, "expected indented enum variants")?;
        } else {
            self.skip_indent_tokens();
        }

        let mut variants = Vec::new();
        let done = if use_brace {
            TokenKind::RightBrace
        } else {
            TokenKind::Dedent
        };

        while !self.check_kind(&done) && !self.is_at_end() {
            self.skip_newlines();
            if self.check_kind(&done) {
                break;
            }
            let variant_name = self.expect_ident("expected variant name")?;
            let mut payload = Vec::new();
            if self.match_kind(&TokenKind::LeftParen) {
                if !self.check_kind(&TokenKind::RightParen) {
                    loop {
                        payload.push(self.parse_type_ref()?);
                        if !self.match_kind(&TokenKind::Comma) {
                            break;
                        }
                        if self.check_kind(&TokenKind::RightParen) {
                            break;
                        }
                    }
                }
                self.expect_kind(&TokenKind::RightParen, "expected ')' after variant payload")?;
            }
            variants.push(Variant {
                name: variant_name,
                payload,
            });
            if use_brace {
                self.match_kind(&TokenKind::Comma);
                self.skip_indent_tokens();
            } else {
                self.match_kind(&TokenKind::Newline);
            }
        }

        if use_brace {
            self.expect_kind(&TokenKind::RightBrace, "expected '}' after enum variants")?;
        } else {
            self.match_kind(&TokenKind::Dedent);
        }
        Ok(variants)
    }

    // ── Generics / where ──────────────────────────────────────────────────────

    fn parse_generics(&mut self) -> LangResult<Vec<String>> {
        let mut generics = Vec::new();
        if !self.match_kind(&TokenKind::LeftBracket) {
            return Ok(generics);
        }
        if !self.check_kind(&TokenKind::RightBracket) {
            loop {
                generics.push(self.expect_ident("expected generic parameter name")?);
                if !self.match_kind(&TokenKind::Comma) {
                    break;
                }
                if self.check_kind(&TokenKind::RightBracket) {
                    break;
                }
            }
        }
        self.expect_kind(
            &TokenKind::RightBracket,
            "expected ']' after generic parameters",
        )?;
        Ok(generics)
    }

    fn skip_where_clauses(&mut self) -> LangResult<()> {
        if !self.match_keyword(Keyword::Where) {
            return Ok(());
        }
        // Skip tokens until we reach a block opener: `{` or a `:` before Newline
        loop {
            if self.is_at_end() {
                break;
            }
            if self.check_kind(&TokenKind::LeftBrace) {
                break;
            }
            if self.check_kind(&TokenKind::Colon) {
                // Check if the colon is the block-opening colon (before newline)
                if matches!(
                    self.peek_n(1).map(|t| &t.kind),
                    Some(TokenKind::Newline) | Some(TokenKind::Eof) | None
                ) {
                    break;
                }
            }
            self.advance();
        }
        Ok(())
    }

    // ── Const ─────────────────────────────────────────────────────────────────

    fn parse_const_decl(&mut self, is_pub: bool) -> LangResult<ConstDecl> {
        let span = self.expect_keyword(Keyword::Const, "expected 'const'")?;
        let name = self.expect_ident("expected constant name")?;
        let ty = if self.match_kind(&TokenKind::Colon) {
            Some(self.parse_type_ref()?)
        } else {
            None
        };
        self.expect_kind(&TokenKind::Equal, "expected '=' in constant declaration")?;
        let value = self.parse_expression(0)?;
        self.match_kind(&TokenKind::Semicolon);
        Ok(ConstDecl {
            name,
            ty,
            value,
            is_pub,
            span,
        })
    }

    // ── Module ────────────────────────────────────────────────────────────────

    fn parse_module(&mut self, is_pub: bool) -> LangResult<ModuleDecl> {
        let span = self.expect_keyword(Keyword::Module, "expected 'module'")?;
        let name = self.expect_ident("expected module name")?;

        let mut items = Vec::new();
        if self.match_kind(&TokenKind::LeftBrace) {
            self.skip_indent_tokens();
            while !self.check_kind(&TokenKind::RightBrace) && !self.is_at_end() {
                self.skip_indent_tokens();
                if self.check_kind(&TokenKind::RightBrace) {
                    break;
                }
                self.parse_top_level_into(&mut items)?;
            }
            self.expect_kind(&TokenKind::RightBrace, "expected '}' to close module")?;
        } else {
            self.expect_kind(&TokenKind::Colon, "expected ':' or '{' to open module")?;
            self.match_kind(&TokenKind::Newline);
            self.expect_kind(&TokenKind::Indent, "expected indented module body")?;
            while !self.check_kind(&TokenKind::Dedent) && !self.is_at_end() {
                self.skip_newlines();
                if self.check_kind(&TokenKind::Dedent) {
                    break;
                }
                self.parse_top_level_into(&mut items)?;
            }
            self.match_kind(&TokenKind::Dedent);
        }
        Ok(ModuleDecl {
            name,
            items,
            is_pub,
            span,
        })
    }

    // ── Import ────────────────────────────────────────────────────────────────

    fn parse_import(&mut self) -> LangResult<ImportDecl> {
        let span = if self.match_keyword(Keyword::Import) {
            self.previous().span.clone()
        } else {
            self.expect_keyword(Keyword::Use, "expected 'import' or 'use'")?
        };
        let mut path = vec![self.expect_ident("expected import path")?];
        while self.match_kind(&TokenKind::Dot) || self.match_kind(&TokenKind::ColonColon) {
            if self.check_kind(&TokenKind::LeftBrace) {
                break;
            }
            path.push(self.expect_ident("expected import segment")?);
        }
        let mut items = Vec::new();
        if self.match_kind(&TokenKind::LeftBrace) {
            if !self.check_kind(&TokenKind::RightBrace) {
                loop {
                    items.push(self.expect_ident("expected imported name")?);
                    if !self.match_kind(&TokenKind::Comma) {
                        break;
                    }
                    if self.check_kind(&TokenKind::RightBrace) {
                        break;
                    }
                }
            }
            self.expect_kind(&TokenKind::RightBrace, "expected '}' in import list")?;
        }
        self.match_kind(&TokenKind::Semicolon);
        Ok(ImportDecl { path, items, span })
    }

    // ── Trait ─────────────────────────────────────────────────────────────────

    fn parse_trait(&mut self, is_pub: bool) -> LangResult<TraitDecl> {
        let span = self.expect_keyword(Keyword::Trait, "expected 'trait'")?;
        let name = self.expect_ident("expected trait name")?;
        let generics = self.parse_generics()?;
        let methods = self.parse_trait_body()?;
        Ok(TraitDecl {
            name,
            generics,
            methods,
            is_pub,
            span,
        })
    }

    fn parse_trait_body(&mut self) -> LangResult<Vec<TraitMethod>> {
        let use_brace = self.match_kind(&TokenKind::LeftBrace);
        if !use_brace {
            self.expect_kind(&TokenKind::Colon, "expected ':' or '{' to open trait")?;
            self.match_kind(&TokenKind::Newline);
            self.expect_kind(&TokenKind::Indent, "expected indented trait body")?;
        } else {
            self.skip_indent_tokens();
        }

        let done = if use_brace {
            TokenKind::RightBrace
        } else {
            TokenKind::Dedent
        };
        let mut methods = Vec::new();

        while !self.check_kind(&done) && !self.is_at_end() {
            self.skip_newlines();
            if self.check_kind(&done) {
                break;
            }
            self.match_keyword(Keyword::Pub);
            let method_span = self.expect_keyword(Keyword::Fn, "expected 'fn' in trait method")?;
            let method_name = self.expect_ident("expected method name")?;
            let _ = self.parse_generics()?;
            let params = self.parse_params()?;
            let return_type = if self.match_kind(&TokenKind::Arrow) {
                self.parse_type_ref()?
            } else {
                TypeRef::Unit
            };
            self.match_kind(&TokenKind::Semicolon);
            if !use_brace {
                self.match_kind(&TokenKind::Newline);
            }
            methods.push(TraitMethod {
                name: method_name,
                params,
                return_type,
                span: method_span,
            });
        }

        if use_brace {
            self.expect_kind(&TokenKind::RightBrace, "expected '}' to close trait")?;
        } else {
            self.match_kind(&TokenKind::Dedent);
        }
        Ok(methods)
    }

    // ── Impl ──────────────────────────────────────────────────────────────────

    fn parse_impl(&mut self) -> LangResult<ImplBlock> {
        let span = self.expect_keyword(Keyword::Impl, "expected 'impl'")?;
        let generics = self.parse_generics()?;
        let first = self.expect_ident("expected type or trait name")?;
        let (trait_name, target) = if self.match_keyword(Keyword::For) {
            let target = self.expect_ident("expected target type name")?;
            if self.match_kind(&TokenKind::LeftBracket) {
                while !self.check_kind(&TokenKind::RightBracket) && !self.is_at_end() {
                    self.advance();
                }
                self.expect_kind(&TokenKind::RightBracket, "expected ']' in impl target")?;
            }
            (Some(first), target)
        } else {
            if self.match_kind(&TokenKind::LeftBracket) {
                while !self.check_kind(&TokenKind::RightBracket) && !self.is_at_end() {
                    self.advance();
                }
                self.expect_kind(&TokenKind::RightBracket, "expected ']' in impl target")?;
            }
            (None, first)
        };

        let methods = self.parse_impl_body()?;
        Ok(ImplBlock {
            trait_name,
            target,
            generics,
            methods,
            span,
        })
    }

    fn parse_impl_body(&mut self) -> LangResult<Vec<FunctionDecl>> {
        let use_brace = self.match_kind(&TokenKind::LeftBrace);
        if !use_brace {
            self.expect_kind(&TokenKind::Colon, "expected ':' or '{' to open impl block")?;
            self.match_kind(&TokenKind::Newline);
            self.expect_kind(&TokenKind::Indent, "expected indented impl body")?;
        } else {
            self.skip_indent_tokens();
        }

        let done = if use_brace {
            TokenKind::RightBrace
        } else {
            TokenKind::Dedent
        };
        let mut methods = Vec::new();

        while !self.check_kind(&done) && !self.is_at_end() {
            self.skip_newlines();
            if self.check_kind(&done) {
                break;
            }
            let is_pub = self.match_keyword(Keyword::Pub);
            let is_async = self.match_keyword(Keyword::Async);
            methods.push(self.parse_function(is_pub, is_async)?);
            if !use_brace {
                self.skip_newlines();
            }
        }

        if use_brace {
            self.expect_kind(&TokenKind::RightBrace, "expected '}' to close impl block")?;
        } else {
            self.match_kind(&TokenKind::Dedent);
        }
        Ok(methods)
    }

    // ── Extern ────────────────────────────────────────────────────────────────

    fn parse_extern(&mut self) -> LangResult<ExternBlock> {
        let span = self.expect_keyword(Keyword::Extern, "expected 'extern'")?;
        let language = self.expect_ident("expected language tag, e.g. c or cpp")?;
        let library = if let TokenKind::String(value) = &self.peek().kind {
            let lib = value.clone();
            self.advance();
            Some(lib)
        } else {
            None
        };

        let use_brace = self.match_kind(&TokenKind::LeftBrace);
        if !use_brace {
            self.expect_kind(
                &TokenKind::Colon,
                "expected ':' or '{' to open extern block",
            )?;
            self.match_kind(&TokenKind::Newline);
            self.expect_kind(&TokenKind::Indent, "expected indented extern body")?;
        } else {
            self.skip_indent_tokens();
        }

        let done = if use_brace {
            TokenKind::RightBrace
        } else {
            TokenKind::Dedent
        };
        let mut items = Vec::new();

        while !self.check_kind(&done) && !self.is_at_end() {
            self.skip_newlines();
            if self.check_kind(&done) {
                break;
            }
            let item_span = self.expect_keyword(Keyword::Fn, "expected 'fn' in extern block")?;
            let name = self.expect_ident("expected extern function name")?;
            let params = self.parse_params()?;
            let return_type = if self.match_kind(&TokenKind::Arrow) {
                self.parse_type_ref()?
            } else {
                TypeRef::Unit
            };
            self.match_kind(&TokenKind::Semicolon);
            if !use_brace {
                self.match_kind(&TokenKind::Newline);
            }
            items.push(ExternItem {
                name,
                params,
                return_type,
                span: item_span,
            });
        }

        if use_brace {
            self.expect_kind(&TokenKind::RightBrace, "expected '}' to close extern block")?;
        } else {
            self.match_kind(&TokenKind::Dedent);
        }
        Ok(ExternBlock {
            language,
            library,
            items,
            span,
        })
    }

    // ── Block ─────────────────────────────────────────────────────────────────

    /// Parse a block: either old-style `{ ... }` or new Python-style `:\n indent ... dedent`.
    fn parse_block(&mut self) -> LangResult<Block> {
        if self.check_kind(&TokenKind::LeftBrace) {
            self.parse_block_brace()
        } else {
            self.parse_block_indent()
        }
    }

    /// Old brace-style block `{ stmts }`.
    fn parse_block_brace(&mut self) -> LangResult<Block> {
        let span = self.expect_kind(&TokenKind::LeftBrace, "expected '{'")?;
        let mut statements = Vec::new();
        loop {
            self.skip_indent_tokens();
            if self.check_kind(&TokenKind::RightBrace) || self.is_at_end() {
                break;
            }
            statements.push(self.parse_statement()?);
        }
        self.expect_kind(&TokenKind::RightBrace, "expected '}' after block")?;
        Ok(Block { statements, span })
    }

    /// New Python-style block `:\n indent stmts dedent`.
    fn parse_block_indent(&mut self) -> LangResult<Block> {
        let span = self.peek().span.clone();
        self.expect_kind(&TokenKind::Colon, "expected ':' or '{' to begin block")?;
        self.match_kind(&TokenKind::Newline);
        self.expect_kind(&TokenKind::Indent, "expected indented block after ':'")?;

        let mut statements = Vec::new();
        loop {
            self.skip_newlines();
            if self.check_kind(&TokenKind::Dedent) || self.is_at_end() {
                break;
            }
            statements.push(self.parse_statement()?);
            self.match_kind(&TokenKind::Newline);
        }
        self.match_kind(&TokenKind::Dedent);
        Ok(Block { statements, span })
    }

    // ── Statements ────────────────────────────────────────────────────────────
